Update icon, cleanup

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,63 +41,19 @@
             android:layout_below="@+id/antidimmer_tv"
             android:layout_marginTop="2dp"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/antidimmer_switch"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/switch_rl"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp"
-        android:id="@+id/relativeLayout2"
-        android:layout_marginBottom="22dp">
-        <SeekBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/brightness_slider"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="4dp"
-            android:max="10"
-            android:layout_below="@+id/brightness_tv"
-            android:layout_toStartOf="@+id/tv_brightness_value"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/vis_brightness"
-            android:id="@+id/brightness_tv"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignEnd="@+id/brightness_slider"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="0"
-            android:id="@+id/tv_brightness_value"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            tools:ignore="HardcodedText"/>
+            android:layout_toStartOf="@+id/antidimmer_switch"
+            android:maxLines="3"
+            android:minLines="3"
+            android:layout_marginBottom="22dp"/>
     </RelativeLayout>
     <pl.lawiusz.lockscreenvisualizerxposed.VisualizerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/visualizer_view"
+        android:layout_alignEnd="@+id/switch_rl"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/relativeLayout2"
-        android:layout_alignParentStart="true"
-        />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/switch_rl"
+        android:layout_marginTop="22dp"
         android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
