--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pl.lawiusz.lockscreenvisualizerxposed.MainActivity"
-    android:orientation="horizontal">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/switch_rl">
-        <Switch
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/antidimmer_switch"
-            android:layout_alignBottom="@+id/antidimmer_summary"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"/>
-
-        <TextView
-            android:clickable="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/antidimmer"
-            android:id="@+id/antidimmer_tv"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignEnd="@+id/antidimmer_summary"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/antidimmer_disabled"
-            android:id="@+id/antidimmer_summary"
-            android:layout_below="@+id/antidimmer_tv"
-            android:layout_marginTop="2dp"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/antidimmer_switch"
-            android:maxLines="3"
-            android:minLines="3"
-            android:layout_marginBottom="22dp"/>
-    </RelativeLayout>
-    <pl.lawiusz.lockscreenvisualizerxposed.VisualizerView
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/visualizer_view"
-        android:layout_alignEnd="@+id/switch_rl"
+        android:id="@android:id/list"
+        android:layout_above="@+id/visualizerview"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="22dp"/>
+    <pl.lawiusz.lockscreenvisualizerxposed.VisualizerView
+        android:layout_width="wrap_content"
+        android:layout_height="256dp"
+        android:id="@+id/visualizerview"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/switch_rl"
-        android:layout_marginTop="22dp"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
