Add Marshmallow support

--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -80,6 +80,8 @@
         android:layout_marginTop="22dp"/>
 
     <TextView
+        android:autoLink="all"
+        android:linksClickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
