--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@android:id/list"
-        android:layout_above="@+id/visualizerview"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="22dp"/>
+        android:layout_alignBottom="@+id/visualizerview"/>
     <pl.lawiusz.lockscreenvisualizerxposed.VisualizerView
         android:layout_width="wrap_content"
         android:layout_height="256dp"
