Fixed preferences, Added option to restart SystemUI Updated libraries, build tools, target sdk, etc.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -21,6 +21,11 @@
         android:title="@string/hide_app"
         android:summary="@string/app_visible"/>
     <Preference
+        android:key="restartsysui"
+        android:title="Restart SystemUI"
+        android:summary="Apply changes immediately"/>
+
+    <Preference
         android:key="xposed_working"
         android:title="@string/xposed_status"/>
     <Preference
