SystemUI restart doesn't need root anymore, Changed the way module's UI shares settings with Xposed part. You may need to open the module's UI at least once so that  all settings are reapplied. The "Prevent screen from dimming" feature can optionally work on battery, Minor fixes and cleanup, Updated  copyright notice.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -5,6 +5,14 @@
         android:key="antidimmer"
         android:summary="@string/antidimmer_disabled"
         android:title="@string/antidimmer"/>
+
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="antidimmer_on_batt"
+        android:summary="@string/antidimmer_batt_disabled"
+        android:enabled="false"
+        android:title="@string/antidimmer_batt"/>
+
     <SwitchPreference
         android:defaultValue="true"
         android:key="autocolor"
